# TinyBirdiary

deploy/: README.md
deploy-scale/: README.md
deploy-scale/main/: CMakeLists.txt  app_main.cpp
deploy-scale/main/include/: bird_classification.hpp  hx711.hpp  image_ring_buffer.hpp  mqtt.hpp
deploy-scale/main/models/: birdiary_v5_squeezenet_layerwise_equalization_2_10_2.espdl
deploy-scale/main/src/: bird_classification.cpp  hx711.cpp  image_ring_buffer.cpp  mqtt.cpp  sd_card.cpp
deploy/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp
deploy/main/include/: image_ring_buffer.hpp  mqtt.hpp  sd_card.hpp
deploy/main/src/: image_ring_buffer.cpp  mqtt.cpp  sd_card.cpp
for-testing/: README.md
for-testing/main/: app_main.cpp
for-testing/main/include/: classification_category_name.hpp
main/: app_main.cpp
main/include/: classification_category_name.hpp
